asset/sass/_screen.scss
/* ... */
img {
    max-width: 100%;
    height: auto;
}

/* @group ----- Forms ----- */

input,
textarea,
button,
.button,
select {
    font-family: "Open Sans", sans-serif;
    font-size: $base-font-size;
    line-height: $base-line-height;
    margin: 0;
    vertical-align: top;
}

input[type="text"],
input[type="password"],
input[type="email"],
input[type="url"],
textarea {
    appearance: none;
    border-radius: 0;
    height: 1.5 * $spacing-l;
    border: 1px solid $light;
    padding: ($spacing-s - 1px) $spacing-l;
    margin: 0;
}

textarea {
    height: 3 * $spacing-l;
}

input[type="file"] {
    line-height: 1;
    vertical-align: bottom;
    font-size: .75 * $base-font-size;
}

button,
a.button,
[type="submit"] {
    background-color: $light;
    border-radius: 2px;
    padding: $spacing-s;
    display: inline-block;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    border: 0;
    cursor: pointer;
}

select {
    background-color: #fff;
    padding: $spacing-s;
    border-color: $light;
    height: 1.5 * $spacing-l;
}

::-webkit-input-placeholder {
   font-style: italic;
}

:-moz-placeholder { /* Firefox 18- */
   font-style: italic;
}

::-moz-placeholder {  /* Firefox 19+ */
   font-style: italic;
}

:-ms-input-placeholder {
   font-style: italic;
}

.field {
    margin: $spacing-l 0;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
}

.field .inputs input[type="checkbox"] {
    vertical-align: bottom;
}

.field .field-meta {
    padding: $spacing-s (1.5 * $spacing-l) $spacing-s 0;
    position: relative;
    width: 100%;
}

.field.multi-value .label,
.field.multi-value .field-description {
    margin-right: $spacing-s;
}

.field.required .field-meta:after {
    content: "\f069";
    font-family: "Font Awesome 5 Free";
    font-size: .75 * $base-font-size;
    font-weight: 900;
}

.field .add-value {
    position: absolute;
    right: .25rem;
    top: 0;
    width: 1.5 * $spacing-l;
}

.field .value:not(:last-child) {
    margin-bottom: $spacing-m;
}

.field-description {
    font-size: .75 * $base-font-size;
}

.field .inputs {
    width: 100%;
}

.field .value * {
    max-width: 100%;
}

.field .value select {
    width: 100%;
    margin-bottom: $spacing-s;
}

/* @end */

/* @group ----- Navigation ----- */

#skipnav {
  position: fixed;
  top: $spacing-l;
  left: 50%;
  border: 1px solid $gray;
  transform: translateX(-50%);
  z-index: -5;
  padding: $spacing-s;
  background-color: #fff;
  opacity: 0;
  
  &:focus {
    z-index: 1000;
    opacity: 1;
  }
}

header h1 {
  margin: 0;
}

header nav {
    position: relative;
    padding: 0;
}

header nav.closed ul {
    height: 0;
    overflow: hidden;
    margin: 0;
}

header nav:before {
    font-family: "Font Awesome 5 Free";
    content: "\f0c9";
    font-weight: 900;
    display: block;
    width: 1.25 * $spacing-l;
    height: 1.25 * $spacing-l;
    border: 1px solid $light;
    text-align: center;
    border-radius: 2px;
    position: absolute;
    right: $spacing-l;
    top: -(1.625 * $spacing-l);
    cursor: pointer;
    line-height: 1.25 * $base-line-height;
}

header nav.open {
    margin: $spacing-m 0 -1px;
}

header nav.open:before {
    content: "\f00d";
}

header nav ul {
    padding-left: 0;
    list-style: none;
    position: relative;
    margin: 0 auto;

    a {
        display: inline-block;
        width: 100%;
        padding: $spacing-s;
    }

    a:hover {
        border-bottom: 0;
        background-color: $light;
    }

    li {
        border-top: 1px solid $light;
        position: relative;
    }

    li li:last-of-type {
        padding-bottom: 0;
    }

    li.active {
        font-weight: bold;
    }
    
    li.parent {
        position: relative;
    }
    
    .parent-link {
      display: flex;
    }

    .parent-link > a {
        width: calc(100% - #{2 * $spacing-l});
    }
    
    .child-toggle {
        color: $light;
        width: 2 * $spacing-l;
        text-align: center;
        background-color: #fff;
        border-left: 1px solid $light;
        appearance: none;
        
        &:before {
            font-family: "Font Awesome 5 Free";
            content: "\f105";
            font-weight: 900;
        }
    }
}

header nav > ul > li:last-child {
    border-bottom: 1px solid $light;
    padding-bottom: -1px;
}

header nav > ul ul li {
    height: 0;
    overflow: hidden;
    border: 0;
}

header nav ul.open > li {
    height: auto;
    border-top: 1px solid $light;
    padding-top: -1px;
}

/* Second level items */
header nav > ul > li > ul > li.active > a {
    margin-left: -1.5em;
}

header nav > ul > li > ul > li.active > a:before {
    content: ">";
    display: inline-block;
    width: 1.5em;
}

header nav > ul > li > ul > li a {
    padding-left: $spacing-l;
}

/* Third level items */
header nav > ul > li > ul > li > ul > li a {
    padding-left: 2 * $spacing-l;
}

/* Fourth level items */
header nav > ul > li > ul > li > ul > li > ul > li a {
    padding-left: 3 * $spacing-l;
}

.sub-menu ul {
    padding-left: 0;
    list-style-type: none;
    margin-top: $spacing-m;
}

.sub-menu li {
    font-size: .75 * $base-font-size;
    font-weight: bold;
    border-bottom: 1px solid $light;
    padding: $spacing-s 0 ($spacing-s - 1px);

    &:first-of-type {
        border-top: 1px solid $light;
        padding-top: ($spacing-s - 1px);
    }
}

nav.pagination {
    margin-bottom: $spacing-l;
    font-size: $base-font-size;
    line-height: 1.5 * $base-line-height;
}

.pagination input {
    text-align: center;
}

.resource-list + .pagination {
    border-color: transparent;
}

.pagination form {
    min-width: 3 * $spacing-l;
}

.pagination form,
.pagination .button,
.pagination button,
.pagination .page-count {
    display: inline-block;
    vertical-align: top;
    height: 1.5 * $base-line-height;
}
/* ... */

